# multi-action-FV

./: BoF_Performance.ods  BoW_plot_results_cmu_kth_eps.m  Computational_Cost.ods  LEEME  Performance_FV_SVM_Weizmann.ods  Performance_SVM_KTH.ods  README.md  gmm_CMU_performance.ods  gmm_KTH_Run1_2_3.ods  performance_FV_cmmu.ods  performance_FV_cmmu_comparar.ods  plot_computational_cost.m  plot_results_cmu_kth.m  plot_results_cmu_kth_eps.m
cmu-mmac/: CMakeLists.txt  FV_cmu_training.m  FV_cmu_training_2.m  FV_cmu_training_parfor.m  classify_segment.m  classify_segment_sysA.m  libsvm_cmu_multi_test.m  libsvm_cmu_multi_test_sysA.m  libsvm_cmu_multi_test_sysA_2FV.m  multiactions_FV.cpp  myplotconfmatriz.m  n_labels_action.m  optflow_feat_def.hpp  optflow_feat_impl.hpp  people_list.txt  plot_results.m  show_performance_cmu.m
cmu-mmac/BoW/: BoW_OpenCV_def.hpp  BoW_OpenCV_feat_def.hpp  BoW_OpenCV_impl.hpp  BoW_main.m  BoW_main_cmu.m  BoW_test.m  BoW_test_cmu.m  BoW_train.m  BoW_train_cmu.m  CMakeLists.txt  actionNames.txt  cmu_multiactions_BoW.cpp
kth/: CMakeLists.txt  FV_kth_all_sc_testing.m  FV_kth_all_sc_training.m  FV_kth_all_sc_training_100000.m  Makefile  PostProcessing.m  classify_segment.m  classify_segment_kth.m  compute_fisher_joha.m  fisher_vector_def.hpp  fisher_vector_impl.hpp  get_bin.m  get_fv.m  (+15 more)
kth/BoW/: BoW_OpenCV_def.hpp  BoW_OpenCV_impl.hpp  BoW_def.hpp  BoW_impl.hpp  BoW_kth_all_sc_training.m  BoW_test.m  BoW_train.m  BoW_train_test.m  CMakeLists.txt  actionNames.txt  classify_segment.m  get_bin.m  get_hist.m  kth_multiactions_BoW.cpp  my_parsave.m
(+12 files in other folders)
